--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,16 @@
         android:text="@string/clear"
         android:textColor="@android:color/holo_blue_light" />
 
+    <TextView
+        android:id="@+id/switch_proxy_pool"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_up"
+        android:layout_margin="5dp"
+        android:layout_toRightOf="@id/clear"
+        android:text="@string/switch_proxy_pool"
+        android:textColor="@android:color/holo_green_light" />
+
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
